# trustedge

./: CLI.md
trustedge-audio/: Cargo.toml
