#
# Copyright (c) 2025 John Turner
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#
[package]
name = "trustedge-audio"
version = "0.1.7"
edition = "2021"

[lib]
name = "trustedge_audio"
path = "src/lib.rs"

[[bin]]
name = "trustedge-audio"
path = "src/main.rs"

[[bin]]
name = "trustedge-server"
path = "src/bin/trustedge-server.rs"

[[bin]]
name = "trustedge-client"
path = "src/bin/trustedge-client.rs"

[[bin]]
name = "trustedge-verify"
path = "src/bin/verify.rs"

[dependencies]
aead = "0.5"
aes-gcm = "0.10.3"
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }  # For timestamps
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
keyring = "2.0"
pbkdf2 = "0.12"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For metadata saving
sha2 = "0.10"
zeroize = "1.7"

# Network dependencies
quinn = "0.10"
rustls = "0.21"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
